Contrast/color adjustments in home drawing + summary fix
.

--- a/_sass/_Home.sass
+++ b/_sass/_Home.sass
@@ -80,13 +80,13 @@
     left: 0
     top: 0
     border-radius: 100%
-    background-color: #eceae7
-    transition: background .1s
+    background-color: #cec4c5
+    transition: background .3s
   &:hover
     &:before
-      background-color: #f7f4f1
+      background-color: #e2dcdc
   .profile-drawing
-    filter: contrast(2.3)
+    filter: contrast(2.8)
     position: absolute
     max-width: 200px
     max-height: 200px
